# BankApi.Core/Implementation/Model.TellerReport.cs
@@ -8,3 +8,12 @@ public class TellerReport
     [MaxLength(7070)]
     public string? Name { get; set; }
 }
+
+public class TellerReportList
+{
+    [MaxLength(1010)]
+    public List<TellerReport> data { get; set; } = new();
+
+    [Range(0, int.MaxValue)]
+    public int count { get; set; } = 0;
+}
